hphp/test/zend/good/ext/gd/tests/imagefontwidth_basic.php
<?php
var_dump(imagefontwidth(1),imagefontwidth(2),imagefontwidth(3),imagefontwidth(4),imagefontwidth(5));
var_dump(imagefontwidth(1) < imagefontwidth(5));
?>