hphp/test/zend/bad/ext/spl/tests/SplFileObject_key_error003.php
<?php
//line 2
//line 3
//line 4
//line 5
$s = new SplFileObject(__FILE__);
$s->key(3);
?>